Fine-tune localizations (en, fr, de) and add localizations (nb, it, sv, fi)

--- a/de.lproj/Localizable.strings
+++ b/de.lproj/Localizable.strings
@@ -6,7 +6,7 @@
    Copyright 2010 Philippe Casgrain. All rights reserved.
  */
  
-"FBAuthWindowTitle" = "Facebook Authentifikation";
+"FBAuthWindowTitle" = "Facebook-Authentifizierung";
 "FBAuthWindowCancel" = "Abbrechen";
-"FBAuthWindowErrorIntro" = "Facebook Authentifikation nicht möglich";
-"FBAuthWindowErrorGenericMessage" = "Bitte versuchen Sie es später erneut oder wenden sich an den Support";
+"FBAuthWindowErrorIntro" = "Facebook-Authentifizierung nicht möglich";
+"FBAuthWindowErrorGenericMessage" = "Bitte versuchen Sie es später erneut.";
