--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -9,4 +9,4 @@
 "FBAuthWindowTitle" = "Facebook Authentication";
 "FBAuthWindowCancel" = "Cancel";
 "FBAuthWindowErrorIntro" = "Facebook authentication not available";
-"FBAuthWindowErrorGenericMessage" = "Please try again later or contact support";
+"FBAuthWindowErrorGenericMessage" = "Please try again later.";
